--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Hw5)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Hw5 Parcel.H DeliveryCompany.H DeliveryCompany.cpp DeliveryVehicle.H DeliveryVehicle.cpp FastDeliveryCompany.H FastDeliveryCompany.cpp FastDeliveryVehicle.H FastDeliveryVehicle.cpp ProfessionalDeliveryCompany.H ProfessionalDeliveryCompany.cpp ProfessionalDeliveryVehicle.H ProfessionalDeliveryVehicle.cpp DeliveryVehicleList.cpp DeliveryVehicleList.h Parcel.cpp main.cpp)
+add_executable(Hw5 Parcel.H DeliveryCompany.H DeliveryCompany.cpp DeliveryVehicle.H DeliveryVehicle.cpp FastDeliveryCompany.H FastDeliveryCompany.cpp FastDeliveryVehicle.H FastDeliveryVehicle.cpp ProfessionalDeliveryCompany.H ProfessionalDeliveryCompany.cpp ProfessionalDeliveryVehicle.H ProfessionalDeliveryVehicle.cpp DeliveryVehicleList.cpp DeliveryVehicleList.h Parcel.cpp main1.C main2.C main3.C)
